*2.0.0 alpha 6* (March 30, 2010)

* Tweak multi-touch behaviour support to new version of Nokia Starlight specs.

* Add empty S2.FX.Base#update function to allow for ad-hoc effects using before/afterUpdate

*2.0.0 alpha 5* (November 23, 2009)

* Add UI Themeroller-compatible UI components

*2.0.0 alpha 4* (October 14, 2009)

* Add multi-touch behaviour support.

*2.0.0 alpha 3* (September 29, 2009)

* Reenable detection of WebKit CSS transition support.

*2.0.0 alpha 2* (September 28, 2009)

* WebKit CSS transition support and support for cubic-bezier easing (JS implementation of transition-timing-function)
  WebKit support is transparent - if running on a supported browser, and the morph requested can be made
  with CSS-based animation, it will automatically use the -webkit-transition-* CSS properties instead of the 
  JavaScript-based engine.

*2.0.0 alpha 1* (June 25, 2009)

* Element#morph is now queueing automatically  (Thomas Fuchs)

* S2.FX.Base#cancel to abort effects in current state, S2.FX.Base#finish to instantaneously finish effects  (Thomas Fuchs)

* Effect options now recognize the following shortcuts: Strings "slow" and "fast" are mapped to { duration:1 } and { duration:.1 }, functions are mapped to { after: function }, and numbers are mapped to { duration:number }.  [#1 state:resolved] (Thomas Fuchs, Radoslav Stankov)

* Default effect length is now 0.2 seconds.  (Thomas Fuchs)