@@ -1,3 +1,5 @@
+* Update to Prototype 1.7rc1 with NWMatcher CSS selector engine
+
 *2.0.0 alpha 6* (March 30, 2010)
 
 * Tweak multi-touch behaviour support to new version of Nokia Starlight specs.
